does this help?

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <h3>To bring individuals into fellowship with Jesus and with each other</h3>
       </section>
 
-      <section class="right" data-background-iframe="/graph.html#1" data-transition="fade">
+      <section class="right" data-background-iframe="./graph.html#1" data-transition="fade">
         <h3>Imagine all kinds of developers</h3>
       </section>
-      <section class="right" data-background-iframe="/graph.html#2" data-transition="fade">
+      <section class="right" data-background-iframe="./graph.html#2" data-transition="fade">
         <h3>Working on their own, making things for their church</h3>
       </section>
-      <section class="right" data-background-iframe="/graph.html#3" data-transition="fade">
+      <section class="right" data-background-iframe="./graph.html#3" data-transition="fade">
         <h3>Happily there are great initiatives to work together</h3>
       </section>
-      <section class="right" data-background-iframe="/graph.html#4" data-transition="fade">
+      <section class="right" data-background-iframe="./graph.html#4" data-transition="fade">
         <h1>But...</h1>
         <h3>What if we could connect better and more?<br><br>And help each other on the way?</h3>
       </section>
