Adding a network overview

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </p>
       </section>
 
-      <section class="right" data-background="./images/space.jpg" data-background-size="contain">
+     <section class="right" data-background="./images/space.jpg" data-background-size="contain">
         <h3>To give light</h3><br>
         <h3>To nurture networks of relationships</h3><br>
         <h3>To bring individuals into fellowship with Jesus and with each other</h3>
       </section>
-
+ 
       <section class="right" data-background-iframe="./graph.html#1" data-transition="fade">
         <h3>Imagine all kinds of developers</h3>
       </section>
@@ -74,8 +74,7 @@
 
       <section>
         <h2>We want to make</h2>
-        <h1>the "WordPress"</h1>
-        <h2>for churches</h2>
+        <h1>the "WordPress" for churches</h1>
       </section>
 
       <section>
@@ -89,6 +88,14 @@
 
       <section>
         <h1>A church community app with videos, eBooks, sermons, bible studies, courses and more.</h1>
+      </section>
+
+      <section class="right" data-background="./images/space.jpg" data-background-size="contain">
+        <h3>But why all these images of networks?</h3>
+      </section>
+
+      <section data-background="white">
+        <div data-svg="./images/overview.svg" data-svg-fragments="Sharing,LightNetToLightNet,LightNetToApp,DataEmbeds"></div>
       </section>
 
       <section data-background="white">
