worked with David

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LightNet lightning talk</title>
+  <title>Lightnet lightning talk</title>
   <script type="module" src="./presentation.js"></script>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
@@ -17,8 +17,13 @@
     <div class="slides">
 
       <section class="right" data-background="./images/library.jpg" data-background-size="contain">
-        <h1>LightNet</h1>
-        <p>Media community platforms<br />for churches and ministries</p>
+        <h1>Lightnet</h1>
+        <p>Media community platforms<br />for groups of Jesus followers and ministries</p>
+      </section>
+
+      <section class="right" data-background="./images/desktop.png" data-background-size="cover">
+        <h3>Here you see what we have build already.</h3><br>
+        <h3>This talk is mosly about what we see for the future.</h3>
       </section>
 
       <section class="verse" data-background="#d22630">
@@ -39,10 +44,10 @@
       </section>
  
       <section class="right" data-background-iframe="./graph.html#1" data-transition="fade">
-        <h3>Imagine all kinds of developers</h3>
+        <h3>Imagine all kinds of Christian developers</h3>
       </section>
       <section class="right" data-background-iframe="./graph.html#2" data-transition="fade">
-        <h3>Working on their own, making things for their church</h3>
+        <h3>Working on their own, making things for their community</h3>
       </section>
       <section class="right" data-background-iframe="./graph.html#3" data-transition="fade">
         <h3>Happily there are great initiatives to work together</h3>
@@ -56,25 +61,27 @@
         <h2>This illustration is true for many things..<br>This hackathon for example!</h2>
       </section>
 
+
       <section>
-        <h1>We would love to see<br>this for churches</h1>
+        <h1>How can we make<br> better use of media<br> for the Kingdom?</h1>
+      </section>
+
+
+      <section>
+        <h1>How can we make this available <br>for groups of Jesus followers globally?</h1>
       </section>
 
       <section>
-        <h2>For christian media,<br>to easily find and distribute it!</h2>
+        <h1>How can we easily find and<br> distribute Christian media,<br>in any language?</h1>
       </section>
 
       <section>
-        <h2>For christian apps, <br>shared development and<br>ease of making apps!</h2>
+        <h1>How can we share development<br>and make it easy to create apps?</h1>
       </section>
 
-      <section>
-        <h2>For christian development tools, <br>Open Sourcing of components that we all can use!</h2>
-      </section>
-
-      <section>
-        <h2>We want to make</h2>
-        <h1>the "WordPress" for churches</h1>
+      <section data-background="#d22630">
+        <h2>We want to help create</h2>
+        <h1>the "WordPress"<br> for any group of<br>Jesus followers</h1>
       </section>
 
       <section>
@@ -82,8 +89,8 @@
       </section>
 
       <section>
-        <h2>But instead of blogging, think:</h2>
-        <h1>Media communities</h1>
+        <h2>But instead of blogging and WordPress, think:</h2>
+        <h1>Software to support groups<br> of Jesus followers</h1>
       </section>
 
       <section>
@@ -91,11 +98,11 @@
       </section>
 
       <section class="right" data-background="./images/space.jpg" data-background-size="contain">
-        <h3>But why all these images of networks?</h3>
+        <h3>But why all these images of networks / graphs?</h3>
       </section>
 
       <section data-background="white">
-        <div data-svg="./images/overview.svg" data-svg-fragments="Sharing,LightNetToLightNet,LightNetToApp,DataEmbeds"></div>
+        <div data-svg="./images/overview.svg" data-svg-fragments="Sharing,LightnetToLightnet,LightnetToApp,DataEmbeds"></div>
       </section>
 
       <section data-background="white">
