--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <section data-background="./images/desktop2.png" data-background-size="cover"></section>
       <section data-background="./images/desktop3.png" data-background-size="cover"></section>
       
-      <section data-background="./images/mobile.png" data-background-size="inherit"></section>
-      <section data-background="./images/mobile2.png" data-background-size="inherit"></section>
+      <section data-background-color="#ddd" data-background-image="./images/mobile.png" data-background-size="inherit"></section>
+      <section data-background-color="#ddd" data-background-image="./images/mobile2.png" data-background-size="inherit"></section>
 
       <section data-background="./images/nadija.png" data-background-size="cover"></section>
       <section data-background="./images/nadija2.png" data-background-size="cover"></section>
