--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
       <section>
-        <h1>How can we make this available <br>for groups of Jesus followers globally?</h1>
+        <h1>How can we make that available <br>for groups of Jesus followers globally?</h1>
       </section>
 
       <section>
@@ -92,8 +92,8 @@
       </section>
 
       <section data-background="#d22630">
-        <h2>We want to create the</h2>
-        <h1>"WordPress" for any group<br>of Jesus followers</h1>
+        <h2>We want to create</h2>
+        <h1>the "WordPress" for any<br>group of Jesus followers</h1>
         <h2 class="fragment">(With you and other developers and other organisations)</h2>
       </section>
 
