adding tech stack

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 
       <section data-background="./images/desktop2.png" data-background-size="cover"></section>
       <section data-background="./images/desktop3.png" data-background-size="cover"></section>
+      <section data-background="./images/admin.png" data-background-size="cover"></section>
       
       <section data-background-color="#ddd" data-background-image="./images/mobile.png" data-background-size="inherit"></section>
       <section data-background-color="#ddd" data-background-image="./images/mobile2.png" data-background-size="inherit"></section>
 
       <section data-background="./images/nadija.png" data-background-size="cover"></section>
       <section data-background="./images/nadija2.png" data-background-size="cover"></section>
+
 
       <section>
         <h1>This talk is mosly about<br> what we see for the future</h1>
@@ -107,22 +109,33 @@
       </section>
 
       <section>
-        <h1>In these communities people deepen their relationships<br> with God and each other.</h1>
+        <h1>In these communities people deepen their relationships<br> with God and each other</h1>
       </section>
 
       <section>
-        <h1>With the help of great media such as videos, eBooks, sermons, bible studies, courses and more.</h1>
+        <h1>Supported by great media such as videos, eBooks, sermons, bible studies, courses and more</h1>
       </section>
       <section class="right" data-background="./images/space.jpg" data-background-size="contain">
         <h3>But why all these images of networks / graphs?</h3>
       </section>
 
       <section data-background="white">
-        <div data-svg="./images/overview.svg" data-svg-fragments="Sharing,LightNetToLightNet,LightNetToApp"></div>
+        <div data-svg="./images/overview.svg" data-svg-fragments="Sharing,LightNetToLightNet,LightNetToApp,DataEmbeds,SharedArchive,Library,YourApp"></div>
       </section>
 
       <section data-background="white">
         <div data-svg="./images/fundament.svg" data-svg-fragments="Base,Fundament,API,SDK,CoreApps,OtherApps"></div>
+      </section>
+
+      <section data-background="./images/space.jpg" data-background-size="cover"></section>
+
+      <section>
+        <h1>Tech stack</h1>
+        <h2>Language: TypeScript front and backend, JSX</h2>
+        <h2>Tooling / frameworks: Vite, Deno, React</h2>
+        <h2>Data: Apache Jena, RDF, SHACL, schema.org</h2>
+        <h2>Infrastructure: Deno, Docker, TerraForm, VPS, Ansible, mTLS</h2>
+        <h2>Cloud Vendors: CloudFlare, Digital Ocean, BackBlaze</h2>
       </section>
 
     </div>
