--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <h3>What if we could connect better and more?<br><br>And help each other on the way?</h3>
       </section>
 
-      <section>
-        <h2>This illustration is true for many things..<br><br>This hackathon for example!</h2>
+      <section id="additional">
+        <h2>This illustration is true for many things..</h2>
       </section>
 
 
@@ -109,7 +109,7 @@
       </section>
 
       <section>
-        <h1>In these communities people deepen their relationships<br> with God and each other</h1>
+        <h1>In these communities people deepen their relationships with God and each other</h1>
       </section>
 
       <section>
